upgpkg: prey-node-client 1.11.3-1
upstream release

--- a/prey-node-client/PKGBUILD
+++ b/prey-node-client/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: xpt <user.xpt@gmail.com>
-# Co-Maintainer: Serge K <arch@phnx47.net>
+# Maintainer: Serge K <arch@phnx47.net>
 
 pkgname=prey-node-client
-pkgver=1.11.2
+pkgver=1.11.3
 pkgrel=1
 pkgdesc="Node.js client for the Prey anti-theft software"
 url="https://github.com/prey/prey-node-client"
@@ -12,22 +12,18 @@ depends=('nodejs>=16.18.0' 'mpg123' 'xawtv' 'scrot' 'openssh' 'wireless_tools' '
 provides=('prey-tracker')
 install="${pkgname}.install"
 source=("${pkgname}-${pkgver}.zip::${url}/releases/download/v${pkgver}/prey-linux-${pkgver}-x64.zip"
-        'prey-tracker'
+        'prey-tracker.sh'
         'disable-auto-updates.patch'
-        'rename-bin.patch'
         'fix-lock.patch')
-sha256sums=('0a08ace09d6fb5a92f00c968869333f69ac7b854f2c7570dd398982a1d827188'
-            '41f29d334e7671b07cfdc848b2752ccc51710471285e8ebe61c07faa0d36160d'
+sha256sums=('22405f6f2bf076355ebb32d8de05bf55d6377d992ec9fa35c60e86a8e06a2de3'
+            'f2e837b40bea3a4e24ada3a9ef385f0db71e9c0aa9e463f9c63619563bd27ef3'
             '37094af138edfa0fce31b43025a8b5e56e4a15715b4094e7ae9eea81f44c9e37'
-            '67411d5de07b9b3fece851ed51de43ffdf0beeaabd6b3786f660c7fe8b477ab2'
             'd4df726fb87b652b352ca44ddb78afe0e16e40dc130753d86c2cbfa92ac2781d')
 
 prepare() {
   cd "prey-${pkgver}"
 
   patch -p0 -i "${srcdir}/disable-auto-updates.patch"
-  # Rename binary: prey -> prey-tracker
-  patch -p0 -i "${srcdir}/rename-bin.patch"
   # Fix broken lock: https://github.com/prey/prey-node-client/issues/679
   patch -p0 -i "${srcdir}/fix-lock.patch"
 }
