--- a/check.toml
+++ b/check.toml
@@ -42,6 +42,12 @@ url = "https://download.live.ledger.com/latest/linux"
 regex = "([0-9]+\\.[0-9]+\\.[0-9]+)"
 header = "location"
 
+[oxen-core]
+source = "github"
+github = "oxen-io/oxen-core"
+use_latest_release = true
+prefix = "v"
+
 [oxen-electron-wallet]
 source = "github"
 github = "oxen-io/oxen-electron-gui-wallet"
