fix: oxen-core _check_tag func

--- a/oxen-core/PKGBUILD
+++ b/oxen-core/PKGBUILD
@@ -5,23 +5,22 @@
 
 pkgname=oxen-core
 pkgver=10.3.0
-pkgrel=1
+pkgrel=2
 pkgdesc='Oxen core containing oxend and oxen cli wallets '
 url='https://github.com/oxen-io/oxen-core'
 arch=('x86_64')
 license=('custom')
 options=('!buildflags')
 makedepends=('git' 'cmake' 'boost' 'zeromq' 'sqlite' 'libsodium' 'curl')
-conflicts=('oxen-core-bin' 'loki-core-git')
 _commit=b309bf8bb65dc28dca8b79f0b0721a4babb1c72a
 source=("${pkgname}-git::git+${url}.git#commit=${_commit}")
 sha512sums=('SKIP')
 
-# Tags can be force pushed or deleted. Ensure the commit contains the tag.
+# Tags can be force pushed or deleted. Ensure the commit has a tag with v${pkgver}
 _check_tag() {
-  tag=$(git tag --contains "${_commit}")
+  tag=$(git name-rev --tags --name-only "${_commit}")
   if [[ "${tag}" != "v${pkgver}" ]]; then
-    echo "Commit [${_commit}] must contains tag [v${pkgver}], but contains [${tag}]"
+    echo "Commit [${_commit}] should have tag [v${pkgver}], but has [${tag}]"
     exit 1
   fi
 }
@@ -35,6 +34,7 @@ prepare() {
 build() {
   cmake -B build -S "${pkgname}-git" \
     -D CMAKE_BUILD_TYPE:STRING='Release' \
+    -D CMAKE_INSTALL_PREFIX:PATH='/usr' \
     -Wno-dev
   cmake --build build
 }
