upg(ledger-live): 2.58.0-1

--- a/ledger-live/PKGBUILD
+++ b/ledger-live/PKGBUILD
@@ -7,40 +7,32 @@
 _pkgbin=ledger-live-desktop
 pkgname=ledger-live
 pkgdesc="Ledger Live - Desktop"
-pkgver=2.57.0
+pkgver=2.58.0
 pkgrel=1
 arch=('x86_64')
 url='https://github.com/LedgerHQ/ledger-live'
 license=('MIT')
-depends=('ledger-udev')
+depends=('ledger-udev' 'electron23')
 makedepends=('python>=3.5' 'node-gyp' 'fnm' 'pnpm')
 _extdir=ledger-live--ledgerhq-live-desktop-${pkgver}
-source=("${_pkgbin}-${pkgver}.tar.gz::https://github.com/LedgerHQ/ledger-live/archive/refs/tags/@ledgerhq/live-desktop@${pkgver}.tar.gz")
-sha512sums=('6b9335381b2b82801c0321e763cb0f4be54f7853dcc66e59779873e5143dd012f1250854e96bf0834a5c056e6dc76b8654be62217322c78848aed0c2ad71f9bd')
+source=("${_pkgbin}-${pkgver}.tar.gz::https://github.com/LedgerHQ/ledger-live/archive/refs/tags/@ledgerhq/live-desktop@${pkgver}.tar.gz"
+        "${_pkgbin}.sh")
+sha512sums=('e397eee65aea4f21e544d33af5a4e9acf810c198998cda949ed65ea360b81a8fff4218ddec0ff8d6681b3f69df75c447165b8f46ba030ae7f7a575e1646d8aa4'
+            '15f6703121d1f2df2dab494efd645ef27830b5cff41184483c75a21545d79b183ababb47bebc8571c7f77e562497efc2453c3e41b59e40ad03be2baacf20148e')
 
 _fnm_use() {
   export FNM_DIR="${srcdir}/.fnm"
   eval "$(fnm env --shell bash)"
-  fnm use --install-if-missing
-}
-
-_check_nodejs() {
-  exp_ver=$(cat .nvmrc)
-  use_ver=$(node -v)
-  if [[ "${exp_ver}" != "${use_ver}" ]]
-  then
-    echo "Using the wrong version of NodeJS! Expected [${exp_ver}] but using [${use_ver}]."
-    exit 1
-  fi
+  version=$(awk -F "=" '/node/ {print $2}' .prototools | xargs)
+  fnm use "${version}" --install-if-missing
 }
 
 build() {
   cd "${_extdir}"
 
   _fnm_use
-  _check_nodejs
 
-  export GIT_REVISION=${pkgver}
+  export GIT_REVISION="${pkgver}"
   pnpm i --filter="ledger-live-desktop..." --filter="ledger-live" --frozen-lockfile --unsafe-perm
   pnpm build:lld:deps
   pnpm desktop build
@@ -51,19 +43,17 @@ build() {
 }
 
 package() {
+  install -Dm 755 "${_pkgbin}.sh" "${pkgdir}/usr/bin/${_pkgbin}"
+
   cd "${_extdir}/apps/${_pkgbin}"
 
-  install -Dm644 "dist/__appImage-x64/${_pkgbin}.desktop" "${pkgdir}/usr/share/applications/${_pkgbin}.desktop"
+  install -Dm 644 "dist/__appImage-x64/${_pkgbin}.desktop" "${pkgdir}/usr/share/applications/${_pkgbin}.desktop"
+  install -Dm 755 "dist/linux-unpacked/resources/app.asar" -t "${pkgdir}/usr/lib/${_pkgbin}"
 
-  install -dm755 "${pkgdir}/opt/${pkgname}"
-  cp -r "dist/linux-unpacked/." "${pkgdir}/opt/${pkgname}"
-  install -dm755 "${pkgdir}/usr/bin"
-  ln -s "/opt/${pkgname}/${_pkgbin}" "${pkgdir}/usr/bin/${_pkgbin}"
-
-  install -Dm644 "build/icons/icon.png" "${pkgdir}/usr/share/icons/hicolor/64x64/apps/${_pkgbin}.png"
+  install -Dm 644 "build/icons/icon.png" "${pkgdir}/usr/share/icons/hicolor/64x64/apps/${_pkgbin}.png"
   for i in 128 256 512 1024; do
-    install -Dm644 "build/icons/icon@${i}x${i}.png" "${pkgdir}/usr/share/icons/hicolor/${i}x${i}/apps/${_pkgbin}.png"
+    install -Dm 644 "build/icons/icon@${i}x${i}.png" "${pkgdir}/usr/share/icons/hicolor/${i}x${i}/apps/${_pkgbin}.png"
   done
 
-  install -Dm644 LICENSE "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
+  install -Dm 644 LICENSE "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 }
