ci(solidity-bin): add check version

--- a/check.toml
+++ b/check.toml
@@ -84,6 +84,12 @@ github = "ethereum/solidity"
 use_latest_release = true
 prefix = "v"
 
+[solidity-bin]
+source = "github"
+github = "ethereum/solidity"
+use_latest_release = true
+prefix = "v"
+
 [xawtv]
 source = "git"
 git = "https://git.linuxtv.org/xawtv3.git"
