--- a/proto-bin/PKGBUILD
+++ b/proto-bin/PKGBUILD
@@ -7,7 +7,7 @@ _pkgname=proto
 pkgname="${_pkgname}-bin"
 pkgdesc='A multi-language version and dependency manager'
 pkgver=0.9.0
-pkgrel=1
+pkgrel=2
 license=('MIT')
 provides=("${_pkgname}")
 conflicts=("${_pkgname}")
@@ -15,7 +15,7 @@ url='https://github.com/moonrepo/proto'
 arch=('x86_64')
 depends=('git')
 _extdir="proto_cli-${arch[0]}-unknown-linux-gnu"
-source=("${_extdir}.tar.xz::${url}/releases/download/v${pkgver}/${_extdir}.tar.xz")
+source=("${pkgname}-${pkgver}.tar.xz::${url}/releases/download/v${pkgver}/${_extdir}.tar.xz")
 sha512sums=('cf86c2ddd3b9c04ed5c5dc00a81db79f0f3215e74716412fcd25aede9d3cb756a875f346b24843f55387998f79caa56aee6ccf6de070fa69d38556ef32c06d02')
 
 package() {
