--- a/ledger-live/PKGBUILD
+++ b/ledger-live/PKGBUILD
@@ -13,23 +13,24 @@ arch=('x86_64')
 url='https://github.com/LedgerHQ/ledger-live'
 license=('MIT')
 depends=('ledger-udev' 'electron23')
-makedepends=('node-gyp' 'proto')
-_extdir="ledger-live--ledgerhq-live-desktop-${pkgver}"
+makedepends=('node-gyp' 'fnm' 'pnpm')
+_extdir=ledger-live--ledgerhq-live-desktop-${pkgver}
 source=("${_pkgbin}-${pkgver}.tar.gz::${url}/archive/refs/tags/@ledgerhq/live-desktop@${pkgver}.tar.gz"
         "${_pkgbin}.sh")
 sha512sums=('e397eee65aea4f21e544d33af5a4e9acf810c198998cda949ed65ea360b81a8fff4218ddec0ff8d6681b3f69df75c447165b8f46ba030ae7f7a575e1646d8aa4'
             '15f6703121d1f2df2dab494efd645ef27830b5cff41184483c75a21545d79b183ababb47bebc8571c7f77e562497efc2453c3e41b59e40ad03be2baacf20148e')
 
-_proto_use() {
-  export PROTO_ROOT="${srcdir}/.proto"
-  export PATH="${PROTO_ROOT}/bin:${PATH}"
-  proto use
+_fnm_use() {
+  export FNM_DIR="${srcdir}/.fnm"
+  eval "$(fnm env --shell bash)"
+  version="$(awk -F "=" '/node/ {print $2}' .prototools | xargs)"
+  fnm use "${version}" --install-if-missing
 }
 
 build() {
   cd "${_extdir}"
 
-  _proto_use
+  _fnm_use
 
   export GIT_REVISION="${pkgver}"
   pnpm i --filter="ledger-live-desktop..." --filter="ledger-live" --frozen-lockfile --unsafe-perm
