--- a/proto/PKGBUILD
+++ b/proto/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=proto
 pkgdesc='A multi-language version and dependency manager'
-pkgver=0.16.1
+pkgver=0.17.0
 pkgrel=1
 license=('MIT')
 url='https://github.com/moonrepo/proto'
@@ -13,9 +13,9 @@ arch=('x86_64')
 depends=('git')
 makedepends=('cargo')
 options=('!lto')
-_sha='975ef98'
+_sha='6085198'
 source=("${pkgname}-${pkgver}-${_sha}.tar.gz::https://api.github.com/repos/moonrepo/proto/tarball/${_sha}")
-sha512sums=('a2f5c14c873ed96f3769be3fde6c9c5f4a9bab28f3721a3c030eec7c524d5681b48ea555af448b5d9b14f48faf0480a86cb7bd4b9573f249fb4cead6adfdedcf')
+sha256sums=('3fb510e6915c2fef06a8fe7919767f447e6f1c72cc11b2742b2f5b887ec6bb1c')
 
 prepare() {
   cd "moonrepo-proto-${_sha}"
@@ -28,10 +28,24 @@ build() {
   export RUSTUP_TOOLCHAIN="stable"
   export CARGO_TARGET_DIR="target"
   cargo build --release --frozen
+  ./"target/release/${pkgname}" completions --shell bash >"${pkgname}-completion.bash"
+  ./"target/release/${pkgname}" completions --shell zsh >"${pkgname}-completion.zsh"
+  ./"target/release/${pkgname}" completions --shell fish >"${pkgname}.fish"
 }
 
 package() {
   cd "moonrepo-proto-${_sha}"
   install -Dm 755 "target/release/${pkgname}" "${pkgdir}/usr/bin/${pkgname}"
   install -Dm 644 "LICENSE" "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
+
+  # completions
+  # bash
+  mkdir -p "${pkgdir}/usr/share/bash-completion/completions"
+  install -Dm644 "${pkgname}-completion.bash" "${pkgdir}/usr/share/bash-completion/completions/${pkgname}"
+  # zsh
+  mkdir -p "${pkgdir}/usr/share/zsh/site-functions"
+  install -Dm644 "${pkgname}-completion.zsh" "${pkgdir}/usr/share/zsh/site-functions/_${pkgname}"
+  # fish
+  mkdir -p "${pkgdir}/usr/share/fish/vendor_completions.d"
+  install -Dm644 "${pkgname}.fish" "${pkgdir}/usr/share/fish/vendor_completions.d/${pkgname}.fish"
 }
