--- a/rustrover-eap/PKGBUILD
+++ b/rustrover-eap/PKGBUILD
@@ -10,8 +10,7 @@ pkgdesc="Rust IDE by JetBrains"
 arch=('x86_64' 'aarch64')
 options=('!strip')
 url="https://www.jetbrains.com/rust/"
-license=("custom")
-optdepends=('mono: .NET runtime' 'msbuild: build .NET Core projects')
+license=('custom:jetbrains')
 source=("${pkgname}.desktop" 'LICENSE')
 source_x86_64=("${pkgname}-${pkgver}-${arch[0]}.tar.gz::https://download-cdn.jetbrains.com/rustrover/RustRover-${pkgver}.tar.gz")
 source_aarch64=("${pkgname}-${pkgver}-${arch[1]}.tar.gz::https://download-cdn.jetbrains.com/rustrover/RustRover-${pkgver}-${arch[1]}.tar.gz")
@@ -21,15 +20,15 @@ sha256sums_x86_64=('5a51bcae179467e9c6440bc0c31bffd27c6fc58d593a0cbecd5aeb51508d
 sha256sums_aarch64=('ead8356bd0e2faff336957e774efa707f5567648d1650270988aa73ca802782c')
 
 package() {
-    install -dm 755 "${pkgdir}/opt/${pkgname}"
-    cp -a "RustRover-${pkgver}/." "${pkgdir}/opt/${pkgname}"
+  install -dm 755 "${pkgdir}/opt/${pkgname}"
+  cp -a "RustRover-${pkgver}/." "${pkgdir}/opt/${pkgname}"
 
-    install -dm 755 "${pkgdir}/usr/bin"
-    ln -s "/opt/${pkgname}/bin/rustrover.sh" "${pkgdir}/usr/bin/${pkgname}"
+  install -dm 755 "${pkgdir}/usr/bin"
+  ln -s "/opt/${pkgname}/bin/rustrover.sh" "${pkgdir}/usr/bin/${pkgname}"
 
-    install -Dm 644 "${pkgname}.desktop" -t "${pkgdir}/usr/share/applications"
-    install -Dm 644 "LICENSE" -t "${pkgdir}/usr/share/licenses/${pkgname}"
+  install -Dm 644 "${pkgname}.desktop" -t "${pkgdir}/usr/share/applications"
+  install -Dm 644 "LICENSE" -t "${pkgdir}/usr/share/licenses/${pkgname}"
 
-    install -dm 755 "${pkgdir}/usr/share/pixmaps"
-    ln -s "/opt/${pkgname}/bin/rustrover.png" "${pkgdir}/usr/share/pixmaps/${pkgname}.png"
+  install -dm 755 "${pkgdir}/usr/share/pixmaps"
+  ln -s "/opt/${pkgname}/bin/rustrover.png" "${pkgdir}/usr/share/pixmaps/${pkgname}.png"
 }
