feat(proto): use full sha

--- a/proto/PKGBUILD
+++ b/proto/PKGBUILD
@@ -13,18 +13,19 @@ arch=('x86_64')
 depends=('git')
 makedepends=('cargo')
 options=('!lto')
-_sha='6085198'
-source=("${pkgname}-${pkgver}-${_sha}.tar.gz::https://api.github.com/repos/moonrepo/proto/tarball/${_sha}")
+_sha='6085198087abfc03fa5b47f2890171c1d44ce773'
+_short_sha="${_sha::7}"
+source=("${pkgname}-${pkgver}-${_short_sha}.tar.gz::https://api.github.com/repos/moonrepo/proto/tarball/${_sha}")
 sha256sums=('3fb510e6915c2fef06a8fe7919767f447e6f1c72cc11b2742b2f5b887ec6bb1c')
 
 prepare() {
-  cd "moonrepo-proto-${_sha}"
+  cd "moonrepo-proto-${_short_sha}"
   export RUSTUP_TOOLCHAIN="stable"
   cargo fetch --locked --target "${CARCH}-unknown-linux-gnu"
 }
 
 build() {
-  cd "moonrepo-proto-${_sha}"
+  cd "moonrepo-proto-${_short_sha}"
   export RUSTUP_TOOLCHAIN="stable"
   export CARGO_TARGET_DIR="target"
   cargo build --release --frozen
@@ -34,7 +35,7 @@ build() {
 }
 
 package() {
-  cd "moonrepo-proto-${_sha}"
+  cd "moonrepo-proto-${_short_sha}"
   install -Dm 755 "target/release/${pkgname}" "${pkgdir}/usr/bin/${pkgname}"
   install -Dm 644 "LICENSE" "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 
