chore(jetbrains-fleet): orig license file

--- a/jetbrains-fleet/PKGBUILD
+++ b/jetbrains-fleet/PKGBUILD
@@ -13,11 +13,11 @@ arch=('x86_64' 'aarch64')
 url="https://www.jetbrains.com/fleet/"
 license=('custom:jetbrains')
 options=('!strip')
-source=("${pkgname}.desktop" 'LICENSE')
+source=("${pkgname}.desktop" 'jetbrains-eap-3.3.docx')
 source_x86_64=("${pkgname}-${pkgver}-${arch[0]}.tar.gz::https://download-cdn.jetbrains.com/fleet/installers/linux_x64/Fleet-${pkgver}.tar.gz")
 source_aarch64=("${pkgname}-${pkgver}-${arch[1]}.tar.gz::https://download-cdn.jetbrains.com/fleet/installers/linux_${arch[1]}/Fleet-${pkgver}-${arch[1]}.tar.gz")
 sha256sums=('af62a597c595edc5b4a8ea3f80ab0a18ea953bfc2d4feaf30e41c6e0dd23d426'
-            '823bce80facc46ff161e0a800bdda27452e8beeb396bb163af560e9e6c796c75')
+            'c05432334b1df86156e2fb0021b27ab8615bb31be26d60f96bf804333bef5685')
 sha256sums_x86_64=('f4e2bbf7a7c89d95f7b41797eb386d30919de64bbea0b6d95b730e7d1d0fda12')
 sha256sums_aarch64=('f5f22d3608f8c778a6b1881f5b2ecb98544eb3e0e938664799bf6452f8b5e2e1')
 
@@ -29,7 +29,7 @@ package() {
   ln -s "/opt/${pkgname}/bin/Fleet" "${pkgdir}/usr/bin/${pkgname}"
 
   install -Dm 644 "${pkgname}.desktop" -t "${pkgdir}/usr/share/applications"
-  install -Dm 644 "LICENSE" -t "${pkgdir}/usr/share/licenses/${pkgname}"
+  install -Dm 644 "jetbrains-eap-3.3.docx" -t "${pkgdir}/usr/share/licenses/${pkgname}"
 
   install -dm 755 "${pkgdir}/usr/share/pixmaps"
   ln -s "/opt/${pkgname}/lib/Fleet.png" "${pkgdir}/usr/share/pixmaps/${pkgname}.png"
