--- a/check.toml
+++ b/check.toml
@@ -30,6 +30,12 @@ url = "https://download.live.ledger.com/latest/linux"
 regex = "([0-9]+\\.[0-9]+\\.[0-9]+)"
 header = "location"
 
+[moon]
+source = "github"
+github = "moonrepo/moon"
+use_latest_release = true
+prefix = "v"
+
 [oxen-core]
 source = "github"
 github = "oxen-io/oxen-core"
