--- a/proto/PKGBUILD
+++ b/proto/PKGBUILD
@@ -5,27 +5,29 @@
 
 pkgname=proto
 pkgdesc='A multi-language version and dependency manager'
-pkgver=0.17.1
+pkgver=0.18.2
 pkgrel=1
 license=('MIT')
-url='https://github.com/moonrepo/proto'
+_gh_owner='moonrepo'
+_gh_repo='proto'
+url="https://github.com/${_gh_owner}/${_gh_repo}"
 arch=('x86_64')
 depends=('git')
 makedepends=('cargo')
 options=('!lto')
-_sha='ae49f6bd72effe14a86cbca8ddd9d1c7398ad3e6'
+_sha='ac34afa28ce5fc3b14efb1e8d971261339da41a9'
 _short_sha="${_sha::7}"
-source=("${pkgname}-${pkgver}-${_short_sha}.tar.gz::https://api.github.com/repos/moonrepo/proto/tarball/${_sha}")
-sha256sums=('ef033f0c28ec674efe02060827f175d08bdbe7bf4b683acee514b4aed3e94f5d')
+source=("${pkgname}-${pkgver}-${_short_sha}.tar.gz::https://api.github.com/repos/${_gh_owner}/${_gh_repo}/tarball/${_sha}")
+sha256sums=('88b6c04e313269d5e311f8e855e31e58d47066c6e51c4e8fc8f11f6fca08ab2d')
 
 prepare() {
-  cd "moonrepo-proto-${_short_sha}"
+  cd "${_gh_owner}-${_gh_repo}-${_short_sha}"
   export RUSTUP_TOOLCHAIN="stable"
   cargo fetch --locked --target "${CARCH}-unknown-linux-gnu"
 }
 
 build() {
-  cd "moonrepo-proto-${_short_sha}"
+  cd "${_gh_owner}-${_gh_repo}-${_short_sha}"
   export RUSTUP_TOOLCHAIN="stable"
   export CARGO_TARGET_DIR="target"
   cargo build --release --frozen
@@ -37,7 +39,7 @@ build() {
 }
 
 package() {
-  cd "moonrepo-proto-${_short_sha}"
+  cd "${_gh_owner}-${_gh_repo}-${_short_sha}"
   install -Dm 755 "target/release/${pkgname}" "${pkgdir}/usr/bin/${pkgname}"
   install -Dm 644 "LICENSE" "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 
