init(ever-surf-bin): 9.4.2-1

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 
 # downloaded license file
 */LICENSE*
+*/surf-decentralization-policy.8f8dd506.md
 
 # subfolders, e.g. source or built package trees, vcs
 */**/
