--- a/check.toml
+++ b/check.toml
@@ -14,6 +14,12 @@ github = "crypto-org-chain/chain-main"
 use_latest_release = true
 prefix = "v"
 
+[ever-surf]
+source = "httpheader"
+url = "https://distribution.services.ever.surf/download/channel/release/linux_64/ever-surf.deb"
+regex = "([0-9]+\\.[0-9]+\\.[0-9]+)"
+header = "Content-Disposition"
+
 [jetbrains-fleet]
 source = "regex"
 url = "https://data.services.jetbrains.com/products/releases?code=FL&latest=true&type=preview"
