fix(cro-chain-desktop-bin): !strip options

--- a/cro-chain-desktop-bin/PKGBUILD
+++ b/cro-chain-desktop-bin/PKGBUILD
@@ -10,10 +10,11 @@ pkgdesc='Crypto.com DeFi Desktop Wallet'
 license=('Apache')
 url='https://github.com/crypto-com/chain-desktop-wallet'
 pkgver=1.4.5
-pkgrel=5
+pkgrel=6
 arch=('x86_64')
 provides=("${_pkgname}")
 conflicts=("${_pkgname}")
+options=('!strip')
 depends=('gtk3' 'nss')
 _appimg="Crypto.com-DeFi-Desktop-Wallet-${pkgver}.AppImage"
 source=("${_appimg}::${url}/releases/download/v${pkgver}/${_appimg}")
